Bug 1003003 - Hold B2G camera callback monitor if we're going to call Notify() on it. r=mikeh, a=1.4+